--- a/webbutveckling/css/style.css
+++ b/webbutveckling/css/style.css
@@ -7,13 +7,12 @@
 
 html {
   font-size: 62.5%;
-  /* 10px/16px = 62.5% -> 1rem = 10px*/
-  /*Påverkar alla regler med enhet "rem"*/
+  line-height: 1.3;
 }
 
 body {
-  padding: 1rem;
-  background: #fff;
+ /* padding: 1rem; */
+  background: #F5F5F5;
   font-family: "Scope One", sans-serif;
   color: rgb(113, 115, 136);
   font-size: 1rem;
@@ -23,11 +22,10 @@ body {
 }
 
 .main > *,
-.title,
 .header,
 .footer {
   padding: 1rem 1rem;
-  margin: 1rem 1rem;
+  margin: 5px 5px;
 }
 
 /*ALLA BILDER SKA VARA 100% så att de anpassar sig till sin behållare oavsett mobil eller desktop!*/
@@ -38,25 +36,29 @@ img {
 
 h1 {
   margin: 0;
-  color: rgb(113, 115, 136);
-  font-size: 4rem;
-  font-weight: 700;
-  padding-top: 0.5rem;
+  font-size: 3.6rem;
+  margin-bottom: 1rem;
+
 }
 
 h2 {
-  color: #999;
-  font-size: 3rem;
+  font-size: 2.6rem;
   margin-bottom: 1rem;
+  text-align: center;
+}
+
+h3 {
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 p {
-  line-height: 1.5;
   margin-bottom: 1rem;
 }
 
 a {
-  color: #e4844a;
+color:rgb(113, 115, 136);
 }
 
 strong {
@@ -67,18 +69,16 @@ strong {
   margin: 0.5rem 0;
 }
 
+.container {
+  min-width: 500px;
+}
+
 .header {
-  border: 3px solid rgb(138, 0, 84);
-}
-
-.header:hover {
-  background-color: rgb(138, 0, 84);
-  border: 3px solid rgb(113, 115, 136);
-  color: #fff;
-}
-
-.header h1 {
-  font-weight: 800;
+ background-image: url("../images/bg-image.jpg"); 
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
+ height: 300px;
 }
 
 .main {
@@ -87,6 +87,7 @@ strong {
 }
 
 .main-nav {
+  background: #fff;
   padding: 1rem;
   border: 3px solid rgb(255, 0, 72);
 }
@@ -95,23 +96,43 @@ strong {
   background-color: rgb(255, 0, 72);
   border: 3px solid rgb(113, 115, 136);
   color: #fff;
+} 
+
+ul.nav-items {
+  list-style: none;
+  font-size: 1.5rem;
+  font-weight: 600;
+ 
 }
+
+ul.nav-items li {
+  margin-bottom: 0.8rem;
+
+}
+ul.nav-items li a {
+text-decoration: none;
+}
+ul.nav-items li a:hover {
+  color: #fff;
+  text-decoration: underline;
+  }
+
 
 .content {
   background: #fff;
   border: 3px solid rgb(113, 115, 136);
   display: flex;
-  flex-direction: column; /* I kolumn i mobillayout*/
+  flex-direction: column; /* I kolumn i mobil-layout*/
   align-items: center;
 }
 
-.rwd-directions {
+.box {
   display: flex;
   flex-wrap: wrap; /*Låt elementen komma på nytt rad om de inte får plats*/
   justify-content: center;
 }
 
-.direction {
+.info {
   min-width: 200px;
   max-width: 300px;
   margin: 2rem;
@@ -126,6 +147,7 @@ strong {
   justify-content: center;
   align-items: center;
 }
+
 .direction:hover {
   color: rgb(169, 170, 181);
   background: #fff;
@@ -141,32 +163,35 @@ strong {
 }
 
 .sidebar {
+  background: #fff;
   padding: 1rem;
   border: 3px solid rgba(2, 143, 118, 0.8);
 }
 
-.sidebar:hover {
+/* .sidebar:hover {
   background-color: rgba(2, 143, 118, 0.8);
   border: 3px solid rgb(113, 115, 136);
   color: #fff;
-}
+} */
 
 .footer {
+  background: #fff;
   border: 3px solid rgba(38, 95, 163, 0.8);
 }
 
-.footer:hover {
+/* .footer:hover {
   background-color: rgba(38, 95, 163, 0.8);
   border: 3px solid rgb(113, 115, 136);
   color: #fff;
-}
+} */
 
 /*MEDIAQUERY MED BRYTPUNKT 600px*/
 /*d.v.s om skärmbredden blir större än 600px ska detta gälla*/
 @media only screen and (min-width: 600px) {
   /* DESKTOP-LAYOUT GOES HERE*/
   html {
-    font-size: 100%; /*Ökar root-fontsize till 100% - påverkar alla regler med enhet "rem"*/
+    font-size: 100%;
+    line-height: 1.4;
   }
 
   .main {
