--- a/webbutveckling/css/style.css
+++ b/webbutveckling/css/style.css
@@ -102,6 +102,9 @@ ul.nav-items {
   list-style: none;
   font-size: 1.5rem;
   font-weight: 600;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
  
 }
 
@@ -194,12 +197,19 @@ ul.nav-items li a:hover {
     line-height: 1.4;
   }
 
+
+  ul.nav-items {
+    flex-direction: column;
+    align-items: space-around;
+  }
+  
   .main {
     flex-direction: row; /*Här kommer elemententen på rad istället!*/
   }
 
   .main-nav {
     flex: 1; /*.main-nav kommer vara lika stor som .sidebar*/
+    justify-content: center;
   }
 
   .content {
